Fixed the layout being broken on mobile-sized and tablet-sized screens.

--- a/css/header.scss
+++ b/css/header.scss
@@ -5,12 +5,24 @@ header
 {
   height: 150px;
 
+  @media (orientation: portrait)
+  {
+    display: flex;
+    height: unset;
+    justify-content: center;
+  }
+
   h1
   {
     text-align: left;
     font-size: 3rem;
     margin: 0;
     display: table;
+
+    @media (orientation: portrait)
+    {
+      text-align: center;
+    }
   }
 
   a
@@ -23,11 +35,22 @@ header
     align-items: end;
     height: 100%;
 
+    @media (orientation: portrait)
+    {
+      grid-template-columns: unset;
+      align-items: center;
+    }
+
     img
     {
       display: block;
       width: 100%;
       height: 100%;
+
+      @media (orientation: portrait)
+      {
+        width: unset;
+      }
     }
   }
 }
